2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (SQLTransaction): Add different
	transaction types.
	* lib/Database.cpp (SQLTransaction): Likewise.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* script/measure-code-size.py: Use realpath to get the
	path of source files in the executable instead of abspath.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* script/mageec.py: Use lndir to create a shadow copy of a
	directory with symlinks to the original source.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* scripts/combined-elimination.py: Do multiple flag tests
	during combined elimination in parallel, using a process
	pool.

2017-03-07  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Set timeout for access to the database
	to around 3 hours.

2017-03-06  Edward Jones  <ed.jones@embecosm.com>

	* scripts/combined-elimination.py: Allow incomplete results
	when measuring benchmarks.

2017-03-03  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database: Set the journaling mode on the SQLite database
	to be an in-memory journal.

2017-03-03  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Framwork.h (Framework::Framework): Add
	with_sql_trace argument.
	(Framework::setSQLTrace): Added method.
	* include/mageec/SQLQuery.h (SQLQuery::m_sql_query): Added
	member.
	* include/mageec/Util.h (withSQLTrace setSQLTrace): Added
	functions.
	* lib/Driver.cpp (main): Parse --sql-trace argument, pass
	value to Framework constructor.
	* lib/Framework.cpp (Framework::Framework): Add with_sql_trace
	argument.
	(Framework::setSQLTrace): Add implementation of function.
	* lib/SQLQuery.cpp (SQLQuery::m_sql_trace): Add member.
	(SQLQuery::exec): Print sql query on query execution.
	* lib/Util.cpp (withSQLTrace setSQLTrace): Added functions.

2017-03-02  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::appendDatabase): Add all compilation
	ids in one large transaction.
